--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^3.7.3",
     "next": "12.2.5",
     "next-auth": "3.29.10",
     "react": "18.2.0",
